@@ -25,10 +25,10 @@
 namespace Rcpp{
 namespace sugar{
 
-template <int RTYPE, 
-    bool NA_1, typename T_1, 
-    bool NA_2, typename T_2, 
-    bool NA_3, typename T_3, 
+template <
+    int RTYPE_1, bool NA_1, typename T_1, 
+    int RTYPE_2, bool NA_2, typename T_2, 
+    int RTYPE_3, bool NA_3, typename T_3, 
     typename Function
 >
 class Mapply_3 : public VectorBase< 
@@ -36,18 +36,18 @@ class Mapply_3 : public VectorBase<
 		typename ::Rcpp::traits::result_of<Function>::type
 	>::rtype , 
 	true ,
-	Mapply_3<RTYPE,NA_1,T_1,NA_2,T_2,NA_3,T_3,Function>
+	Mapply_3<RTYPE_1,NA_1,T_1,RTYPE_2,NA_2,T_2,RTYPE_3,NA_3,T_3,Function>
 > {
 public:         
 	typedef typename ::Rcpp::traits::result_of<Function>::type result_type ;
 	
-    typedef Rcpp::VectorBase<RTYPE,NA_1,T_1> VEC_1 ;
-	typedef Rcpp::VectorBase<RTYPE,NA_2,T_2> VEC_2 ;
-	typedef Rcpp::VectorBase<RTYPE,NA_3,T_3> VEC_3 ;
+    typedef Rcpp::VectorBase<RTYPE_1,NA_1,T_1> VEC_1 ;
+	typedef Rcpp::VectorBase<RTYPE_2,NA_2,T_2> VEC_2 ;
+	typedef Rcpp::VectorBase<RTYPE_3,NA_3,T_3> VEC_3 ;
 	
-	typedef typename Rcpp::traits::Extractor<RTYPE,NA_1,T_1>::type EXT_1 ;
-	typedef typename Rcpp::traits::Extractor<RTYPE,NA_2,T_2>::type EXT_2 ;
-	typedef typename Rcpp::traits::Extractor<RTYPE,NA_3,T_3>::type EXT_3 ;
+	typedef typename Rcpp::traits::Extractor<RTYPE_1,NA_1,T_1>::type EXT_1 ;
+	typedef typename Rcpp::traits::Extractor<RTYPE_2,NA_2,T_2>::type EXT_2 ;
+	typedef typename Rcpp::traits::Extractor<RTYPE_3,NA_3,T_3>::type EXT_3 ;
 	
 	Mapply_3( const VEC_1& vec_1_, const VEC_2& vec_2_, const VEC_3& vec_3_, Function fun_ ) : 
 		vec_1(vec_1_.get_ref()), vec_2(vec_2_.get_ref()), vec_3(vec_3_.get_ref()), fun(fun_){}
@@ -66,15 +66,20 @@ private:
 	
 } // sugar
 
-template <int RTYPE, bool NA_1, typename T_1, bool NA_2, typename T_2, bool NA_3, typename T_3, typename Function >
-inline sugar::Mapply_3<RTYPE,NA_1,T_1,NA_2,T_2,NA_3,T_3,Function> 
+template <
+    int RTYPE_1, bool NA_1, typename T_1, 
+    int RTYPE_2, bool NA_2, typename T_2, 
+    int RTYPE_3, bool NA_3, typename T_3, 
+    typename Function
+    >
+inline sugar::Mapply_3<RTYPE_1,NA_1,T_1,RTYPE_2,NA_2,T_2,RTYPE_3, NA_3,T_3,Function> 
 mapply( 
-    const Rcpp::VectorBase<RTYPE,NA_1,T_1>& t1, 
-    const Rcpp::VectorBase<RTYPE,NA_2,T_2>& t2, 
-    const Rcpp::VectorBase<RTYPE,NA_3,T_3>& t3, 
+    const Rcpp::VectorBase<RTYPE_1,NA_1,T_1>& t1, 
+    const Rcpp::VectorBase<RTYPE_2,NA_2,T_2>& t2, 
+    const Rcpp::VectorBase<RTYPE_3,NA_3,T_3>& t3, 
     Function fun
 ){
-	return sugar::Mapply_3<RTYPE,NA_1,T_1,NA_2,T_2,NA_3,T_3,Function>( t1, t2, t3, fun ) ;
+	return sugar::Mapply_3<RTYPE_1,NA_1,T_1,RTYPE_2,NA_2,T_2,RTYPE_3,NA_3,T_3,Function>( t1, t2, t3, fun ) ;
 }
 
 } // Rcpp
